--- a/Useless.html
+++ b/Useless.html
@@ -1,7 +1,7 @@
-<template
-    class="scrollbar-thumb-royal scrollbar-thumb-brew scrollbar-thumb-valencia scrollbar-thumb-amethyst 
+<template class="scrollbar-thumb-royal scrollbar-thumb-brew scrollbar-thumb-valencia scrollbar-thumb-amethyst 
     scrollbar-thumb-emerald bg-valencia-50 bg-brew-50 bg-amethyst-50 bg-emerald-50 bg-royal-50 text-royal
     text-brew text-emerald text-valencia text-amethyst border-royal border-brew border-emerald border-amethyst
     hover:text-amethyst hover:text-royal hover:text-emerald hover:text-brew hover:text-valencia
-    group-hover:bg-brew group-hover:bg-royal group-hover:bg-amethyst group-hover:bg-valencia group-hover:bg-emerald h-6 w-6">
+    group-hover:bg-brew group-hover:bg-royal group-hover:bg-amethyst group-hover:bg-valencia group-hover:bg-emerald h-6 w-6
+    bg-emerald bg-royal bg-brew bg-amethys bg-valencia grid-cols-2 grid-cols-1 col-span-2 col-span-1">
 </template>
