--- a/index.html
+++ b/index.html
@@ -5,11 +5,9 @@
   <meta charset="UTF-8" />
   <link rel="icon" href="/favicon.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>CoolFolio</title>
 </head>
 
-<body class="bg-bray-500">
-  <div id="app"></div>
+<body class="bg-bray-500 text-gray-300" id="app">
   <script type="module" src="/src/main.js"></script>
 </body>
 
